Closed Bug 1697890 Opened 4 years ago Closed 4 years ago

[Fission] Unexpected blank/white space on the right side of iframes (next to scrollbar)

Categories

(Core :: Layout, defect, P3)

defect

Tracking

()

RESOLVED FIXED
88 Branch
Fission Milestone M7
Tracking Status
firefox-esr78 --- disabled
firefox86 --- disabled
firefox87 --- disabled
firefox88 --- fixed

People

(Reporter: dholbert, Assigned: hiro)

References

(Regression)

Details

(Keywords: regression)

Attachments

(3 files)

+++ This bug was initially created as a clone of Bug #1656086 +++

STR:

  1. Ensure that you're running in a browser with Fission enabled. (e.g. set fission.autostart to true in about:config and restart Firefox)

  2. View this data URI:

data:text/html,<iframe src="https://www.w3.org/" style="width:500px">

EXPECTED RESULTS:
At the right side (next to the scrollbar), you should see a stripe with a blue gradient (which you'll also see if you directly visit https://www.w3.org/)

ACTUAL RESULTS::
There's a white stripe there instead.

Nightly-without-Fission and Chrome both give me EXPECTED RESULTS.
Nightly-with-Fission gives me ACTUAL RESULTS.

Summary: [Fission] Incorrect spacing on the right in add-on → [Fission] Unexpected blank/white space on the right side of iframes (next to scrollbar)

Regression range (from tnikkel in bug 1656086 comment 25, which I just double-checked with my STR here, & confirmed to still be correct):

https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=88db9bea4580df16dc444668f8c2cddbb3414318&tochange=bbbe694dbff25ce304833a9c2f6520ba9f61fb32

Simpler testcase (doesn't depend on w3c-hosted content):

data:text/html,<iframe src="https://bug1697890.bmoattachments.org/attachment.cgi?id=9208495">

EXPECTED RESULTS: Consistent lime border inside the iframe (with a little space set aside for a scroller at the right side)
ACTUAL RESULTS: lime border is missing on the right side; it's clipped. (It looks like we're reserving twice as much space as we actually need for the scrollbar, or something like that.)

Fission Milestone: --- → M7
Attached image PJ1e6POLUB.png

Sometimes it looks like this. Is this the same bug?

Flags: needinfo?(dholbert)

I'm not sure; it might be. Can you reproduce that issue in an iframe in a data:text/html,<iframe src="...some yahoo URL here..."> testcase?

Flags: needinfo?(dholbert)

There may be still inconsistency uses of IsRootContentDocument().

Regressed by: 1596494
Has Regression Range: --- → yes

I found the place.

Assignee: nobody → hikezoe.birchill
Status: NEW → ASSIGNED
Pushed by hikezoe.birchill@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/82de87924bb9 Use IsRootContentDocumentCrossProcess in ScrollbarAreaToExcludeFromCompositionBoundsFor. r=tnikkel
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 88 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: