Bug 1697890 - Use IsRootContentDocumentCrossProcess in ScrollbarAreaToExcludeFromCompositionBoundsFor. r=tnikkel

Differential Revision: https://phabricator.services.mozilla.com/D108143